--- a/index.html
+++ b/index.html
@@ -9,9 +9,16 @@
 	<title>Class Games</title>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.min.css">
 
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auUHpCbljSRJ69Kp4YL4hWfP5x0Wf5rQ4aENbo"
+      crossorigin="anonymous">
+
 	<link rel="stylesheet" href="styles/styles.css">
+
+	<!-- Bootstrap -->
+
+
 </head>
 
 <!-- top nav bar -->
@@ -21,9 +28,8 @@
 		<div class="container-fluid">
 			<div class="container">
 				<a class="navbar-brand border-two" href="#">Class Games</a>
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-					data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-					aria-expanded="false" aria-label="Toggle navigation">
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+					aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -35,29 +41,69 @@
 							<a class="nav-link" href="#" target="_blank">How To Play!</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="https://github.com/ChickenAlfredo1121/doom-and-dispair-project-charlie" target="_blank">Group Dev Profile</a>
+							<a class="nav-link" href="https://github.com/ChickenAlfredo1121/doom-and-dispair-project-charlie"
+								target="_blank">Group Dev Profile</a>
 						</li>
 					</ul>
 				</div>
 			</div>
 		</div>
 	</nav>
-    <div class="HomePage">
-    >   <div class="title"><h1>Class Game Repository!</h1></div>
-        <div class="text"><p>This is a collection of the student's games that were made for Project Bravo! Listed below is each person's game, repo, source data, and an image of thier game, enjoy!
-        </p></div>
-        <div class="text"><p>Please browse the games listed below, you can sort by author name or by game title!</p></div>
-    </div>
+	<div class="HomePage">
+		<div class="title">
+			<h1>Class Game Repository!</h1>
+		</div>
+		<div class="text">
+			<p>This is a collection of the student's games that were made for Project Bravo! Listed below is each person's
+				game, repo, source data, and an image of thier game, enjoy!
+			</p>
+		</div>
+		<div class="text">
+			<p>Please browse the games listed below, you can sort by author name or by game title!</p>
+		</div>
+	</div>
 
 	<!-- Dropdown button -->
-	 
+	<!-- Resource Link: https://getbootstrap.com/docs/4.0/components/dropdowns/ -->
+
+<div class="container my-4">
+  <div class="dropdown mb-3">
+    <button class="btn btn-secondary dropdown-toggle" type="button"
+            id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+      Sort by
+    </button>
+    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+      <a class="dropdown-item by-name"  href="#">Developer Name</a>
+      <a class="dropdown-item by-order" href="#">Alphabetical order</a>
+      <a class="dropdown-item by-rating" href="#">Rating</a>
+    </div>
+  </div>
+
+  <!-- API Output -->
+  <ul id="gameSort" class="list-group" aria-live="polite"></ul>
+</div>
+
+
+<!-- API Output -->
+<ul id="gameSort" class="list-group mt-3" aria-live="polite"></ul>
+
+<!-- Bootstrap JS bundle, then your script -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+<script src="./script.js"></script>
+
+
+
 	<!-- footer for page -->
 	<footer class="text-center">
 		<a href="https://github.com/ChickenAlfredo1121" target="_blank">My Dev Profile</a>
 		<a href="https://github.com/ChickenAlfredo1121/ProjectBravo" target="_blank">Repo</a>
 		<a href="https://chickenalfredo1121.github.io/ProjectBravo/" target="_blank">Github Page</a>
-		<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fchickenalfredo1121.github.io%2FProjectBravo%2F" target="_blank">Nu Report</a>
-		<a href="https://wave.webaim.org/report#/https://chickenalfredo1121.github.io/ProjectBravo" target="_blank">Wave Report</a>
+		<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fchickenalfredo1121.github.io%2FProjectBravo%2F"
+			target="_blank">Nu Report</a>
+		<a href="https://wave.webaim.org/report#/https://chickenalfredo1121.github.io/ProjectBravo" target="_blank">Wave
+			Report</a>
 	</footer>
 </body>
 
