--- a/index.html
+++ b/index.html
@@ -35,12 +35,6 @@
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
 					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 						<li class="nav-item">
-							<a id="play-btn" class="nav-link" href="#">Play/Reset</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#" target="_blank">How To Play!</a>
-						</li>
-						<li class="nav-item">
 							<a class="nav-link" href="https://github.com/ChickenAlfredo1121/doom-and-dispair-project-charlie"
 								target="_blank">Group Dev Profile</a>
 						</li>
@@ -96,7 +90,7 @@
 
 
 	<!-- footer for page -->
-	<footer class="text-center">
+	<!-- <footer class="text-center">
 		<a href="https://github.com/ChickenAlfredo1121" target="_blank">My Dev Profile</a>
 		<a href="https://github.com/ChickenAlfredo1121/ProjectBravo" target="_blank">Repo</a>
 		<a href="https://chickenalfredo1121.github.io/ProjectBravo/" target="_blank">Github Page</a>
@@ -104,8 +98,9 @@
 			target="_blank">Nu Report</a>
 		<a href="https://wave.webaim.org/report#/https://chickenalfredo1121.github.io/ProjectBravo" target="_blank">Wave
 			Report</a>
-	</footer>
+	</footer> -->
 </body>
 
 
 </html>
+
