--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 	<title>Class Games</title>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.min.css">
 
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auUHpCbljSRJ69Kp4YL4hWfP5x0Wf5rQ4aENbo"
-      crossorigin="anonymous">
+      crossorigin="anonymous"> -->
 
 	<link rel="stylesheet" href="styles/styles.css">
 
@@ -34,6 +36,12 @@
 				</button>
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
 					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+						<li class="nav-item">
+							<a id="play-btn" class="nav-link" href="#">Play/Reset</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#" target="_blank">How To Play!</a>
+						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="https://github.com/ChickenAlfredo1121/doom-and-dispair-project-charlie"
 								target="_blank">Group Dev Profile</a>
@@ -90,7 +98,7 @@
 
 
 	<!-- footer for page -->
-	<!-- <footer class="text-center">
+	<footer class="text-center">
 		<a href="https://github.com/ChickenAlfredo1121" target="_blank">My Dev Profile</a>
 		<a href="https://github.com/ChickenAlfredo1121/ProjectBravo" target="_blank">Repo</a>
 		<a href="https://chickenalfredo1121.github.io/ProjectBravo/" target="_blank">Github Page</a>
@@ -98,9 +106,7 @@
 			target="_blank">Nu Report</a>
 		<a href="https://wave.webaim.org/report#/https://chickenalfredo1121.github.io/ProjectBravo" target="_blank">Wave
 			Report</a>
-	</footer> -->
+	</footer>
 </body>
 
-
 </html>
-
