--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
   <ul id="gameSort" class="list-group" aria-live="polite"></ul>
 </div>
 
+<div id="imageContainer" class="image-container"></div>
 
 <!-- API Output -->
 <ul id="gameSort" class="list-group mt-3" aria-live="polite"></ul>
